# cli-core

./: README.md  pyproject.toml
cli_core/: __main__.py  deps.py  files.py  log.py  system.py
docs/: cli-core.md
templates/python/: main.py  setup.sh
