[project]
name = "cli-core"
version = "1.0.0"
description = "Reusable CLI utilities"
authors = [{name = "Gustavo"}]
dependencies = ["rich"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli_core"]

[tool.setuptools.package-data]
"cli_core" = ["../templates/**/*"]
